<?xml version="1.0"?>
<package format="3">
  <name>hsv_range_tool</name>
  <version>0.1.0</version>
  <description>
     HSV Range Tool for real-time color filtering
  </description>
  <maintainer email="author@mail.com">author</maintainer>
  <author>author</author>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- System dependencies -->
  <depend>libopencv-dev</depend>
  <depend>qtbase5-dev</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>